package proto;

import "proto/SynFightBoProto.proto";

option java_package = "com.funcy.g01.base.proto.bo.service";
option java_outer_classname = "MapServiceRespProtoBuffer";

message GetRoleMapInfoList {
	repeated ServerMapInfoProto fightMapInfoList = 1;
}
